Fix workspace main components collapsing with more than a dozen tasks in the list

--- a/app/assets/stylesheets/components/_workspace_home.scss
+++ b/app/assets/stylesheets/components/_workspace_home.scss
@@ -9,6 +9,7 @@
     margin: 0 20px;
     height: calc(100vh - 70px);
     position: relative;
+    overflow-y: scroll;
 }
 
 .home-section {
@@ -16,7 +17,6 @@
     flex-flow: column nowrap;
     align-items: flex-start;
     justify-content: center;
-    min-height: 90px;
     margin-top: 30px;
     margin-bottom: 30px;
     margin-left: auto;
